# pak-io

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  requirements.txt
.github/workflows/: CI.yml
cmake/: options.cmake  packages.cmake
docs/: CMakeLists.txt  api_reference.rst  conf.py.in  index.rst
src/: CMakeLists.txt
src/pak-io/: CMakeLists.txt  error-code.cxx  error-code.hxx  file-system.cxx  file-system.hxx
src/pak-io/details/: CMakeLists.txt  fios.hxx  pod.hxx  version.hxx.in  writer.cxx  writer.hxx
src/pak-io/details/posix/: CMakeLists.txt  fios.cxx
src/pak-io/details/win32/: CMakeLists.txt  fios.cxx
src/pak-make/: CMakeLists.txt  main.cxx
src/pak-unmake/: CMakeLists.txt  main.cxx
src/pak-viewer/: CMakeLists.txt  __main__.py  pakmodel.py
src/pak-viewer/qml/: main.qml
src/python/: CMakeLists.txt  py-pak-io.cxx
tests/: CMakeLists.txt  bindings.py  file-system.cxx
tests/data/: five-twelve-kibibytes.txt  sample.json  thirty-five-bytes.txt
tests/data/one-subdirectory/: one-mebibytes.txt
tests/data/one-subdirectory/two-subdirectory/: two-mebibytes.txt
